RESOLVED FIXED312177
AX: Color picker doesn't open after an AXPress event
https://bugs.webkit.org/show_bug.cgi?id=312177
Summary AX: Color picker doesn't open after an AXPress event
Joshua Hoffman
Reported 2026-04-13 12:19:21 PDT
.
Attachments
Joshua Hoffman
Comment 1 2026-04-13 12:19:25 PDT
Joshua Hoffman
Comment 2 2026-04-13 12:21:40 PDT
EWS
Comment 3 2026-04-13 22:20:20 PDT
Committed 311168@main (e78af970b57a): <https://commits.webkit.org/311168@main> Reviewed commits have been landed. Closing PR #62655 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.