AX: Color picker doesn't open after an AXPress event https://bugs.webkit.org/show_bug.cgi?id=312177 rdar://172218114

Reviewed by Tyler Wilcock.

We need to consider the color picker an action element to handle press()
properly.

Test: accessibility/color-picker-press.html
* LayoutTests/accessibility/color-picker-press-expected.txt: Added.
* LayoutTests/accessibility/color-picker-press.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::nodeActionElement):

Canonical link: https://commits.webkit.org/311168@main